--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,15 @@ edition = "2021"
 clap = {git = "https://github.com/clap-rs/clap", features = ["derive", "suggestions"]}
 ignore = "0.4.18"
 flate2 = "1.0.22"
-tar = "*"
+tar = "0.4.37"
+open = "2.0.1"
+hostname = "0.3.1"
+futures = "0.3.17"
+futures-util = "0.3.17"
+tokio = { version = "1.14.0", features = ["full"] }
+indicatif = {version = "0.16.2", features = ["rayon"]}
+rayon = "1.5.1"
+gzp = "0.9.2"
+reqwest = {version = "0.11.6", features = ["multipart", "stream"]}
+bytes = "1.1.0"
+synchronized-writer = "1.1.10"
