--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,18 +9,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = {git = "https://github.com/clap-rs/clap", features = ["derive", "suggestions"]}
+clap = { git = "https://github.com/clap-rs/clap", features = ["derive", "suggestions"] }
 ignore = "0.4.18"
-flate2 = "1.0.22"
 tar = "0.4.37"
 open = "2.0.1"
 hostname = "0.3.1"
-futures = "0.3.17"
-futures-util = "0.3.17"
 tokio = { version = "1.14.0", features = ["full"] }
-indicatif = {version = "0.16.2", features = ["rayon"]}
-rayon = "1.5.1"
+indicatif = "0.16.2"
 gzp = "0.9.2"
-reqwest = {version = "0.11.6", features = ["multipart", "stream"]}
-bytes = "1.1.0"
+reqwest = { version = "0.11.6", features = ["multipart", "stream"] }
 synchronized-writer = "1.1.10"
+futures = "0.3.17"
