--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,9 @@ gzp = "0.9.2"
 reqwest = { version = "0.11.6", features = ["multipart", "stream"] }
 synchronized-writer = "1.1.10"
 futures = "0.3.17"
+graphql_client = {version = "0.10.0", features = ["reqwest"]}
+serde = {version = "1.0.130", features = ["derive"]}
+serde_json = "1.0.70"
+dirs = "4.0.0"
+base64 = "0.13.0"
+colored = "2"
