--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ open = "2.0.1"
 hostname = "0.3.1"
 tokio = { version = "1.14.0", features = ["full"] }
 indicatif = "0.16.2"
+dialoguer = "0.9.0"
 gzp = "0.9.2"
 reqwest = { version = "0.11.6", features = ["multipart", "stream"] }
 synchronized-writer = "1.1.10"
