--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,3 +22,5 @@ jobs:
         uses: rust-build/rust-build.action@latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          RUSTTARGET: ${{ matrix.target }}
+          ARCHIVE_TYPES: ${{ matrix.archive }}
