--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,105 +3,57 @@ on:
     types: [created]
 
 jobs:
-  publish-to-github:
-    name: Publish to Github
-    runs-on: ${{matrix.os}}
-    strategy:
-      matrix:
-        include:
-          - build: linux
-            os: ubuntu-latest
-            rust: stable
-            target: x86_64-unknown-linux-gnu
-            cross: true
-          - build: windows
-            os: ubuntu-latest
-            rust: stable
-            target: x86_64-pc-windows-gnu
-            linker: gcc-mingw-w64
-            cross: true
-          - build: arm-v7
-            os: ubuntu-latest
-            rust: stable
-            target: armv7-unknown-linux-gnueabihf
-            linker: gcc-arm-linux-gnueabihf
-            cross: true
-          - build: aarch64
-            os: ubuntu-latest
-            rust: stable
-            target: aarch64-unknown-linux-gnu
-            linker: gcc-aarch64-linux-gnu
-            cross: true
-          - build: macos
-            os: macos-latest
-            rust: stable
-            target: x86_64-apple-darwin
-            cross: false
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
+  name: deploy
+  runs-on: ubuntu-latest
+  strategy:
+    matrix:
+      target:
+        [
+          aarch64-unknown-linux-gnu,
+          armv7-unknown-linux-gnueabihf,
+          i686-unknown-linux-gnu,
+          i686-unknown-linux-musl,
+          mips-unknown-linux-gnu,
+          mips64-unknown-linux-gnuabi64,
+          mips64el-unknown-linux-gnuabi64,
+          mipsel-unknown-linux-gnu,
+          powerpc-unknown-linux-gnu,
+          powerpc64-unknown-linux-gnu,
+          powerpc64le-unknown-linux-gnu,
+          arm-unknown-linux-gnueabi,
+          x86_64-unknown-linux-gnu,
+          x86_64-unknown-linux-musl,
+          x86_64-pc-windows-gnu
+        ]
+  steps:
+    - name: Checkout
+      uses: actions/checkout@v1
+    - name: Install rust
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        profile: minimal
+        override: true
+        target: ${{ matrix.target }}
 
-      - name: Cache
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            ~/.rustup
-            target
-          key: ${{ runner.os }}-${{ matrix.rust }}
+    - name: Build target
+      uses: actions-rs/cargo@v1
+      with:
+        use-cross: true
+        command: build
+        args: --release --target ${{ matrix.target }}
 
-      - name: Install Linker
-        if: matrix.cross
-        run: |
-          sudo apt update
-          sudo apt install ${{ matrix.linker }}
-      - name: Install Rust
-        run: |
-          rustup install ${{ matrix.rust }}
-          rustup target add ${{ matrix.target }}
-          rustup show
-      - name: Build
-        run: cargo build --release --target ${{ matrix.target }}
-
-      - name: Package Artifacts
-        run: |
-          src=$(pwd)
-          stage=
-          case $RUNNER_OS in
-              Linux)
-                  stage=$(mktemp -d)
-                  ;;
-              macOS)
-                  stage=$(mktemp -d -t tmp)
-                  ;;
-          esac
-          cp target/${{ matrix.target }}/release/sysit $stage/
-          cd $stage
-          RELEASE_VERSION=${GITHUB_REF#refs/tags/}
-          ASSET_NAME="sysit-$RELEASE_VERSION-${{ matrix.target }}.tar.gz"
-          ASSET_PATH="$src/$ASSET_NAME"
-          CHECKSUM_PATH="$ASSET_PATH.sha256"
-          echo "ASSET_PATH=$ASSET_PATH" >> $GITHUB_ENV
-          echo "CHECKSUM_PATH=$CHECKSUM_PATH" >> $GITHUB_ENV
-          tar czf $ASSET_PATH *
-          cd $src
-          case $RUNNER_OS in
-              Linux)
-                  sha256sum $ASSET_NAME > $CHECKSUM_PATH
-                  ;;
-              macOS)
-                  shasum -a 256 $ASSET_NAME > $CHECKSUM_PATH
-                  ;;
-          esac
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            ${{ env.ASSET_PATH }}
-            ${{ env.CHECKSUM_PATH }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Package
+      shell: bash
+      run: |
+        #strip target/${{ matrix.target }}/release/testmest
+        cd target/${{ matrix.target }}/release          
+        tar czvf ../../../testmest-${{ matrix.target }}.tar.gz testmest
+        cd -
+    - name: Publish
+      uses: softprops/action-gh-release@v1
+      # TODO: if any of the build step fails, the release should be deleted.
+      with:
+        files: "testmest*"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
