--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,57 +3,58 @@ on:
     types: [created]
 
 jobs:
-  name: deploy
-  runs-on: ubuntu-latest
-  strategy:
-    matrix:
-      target:
-        [
-          aarch64-unknown-linux-gnu,
-          armv7-unknown-linux-gnueabihf,
-          i686-unknown-linux-gnu,
-          i686-unknown-linux-musl,
-          mips-unknown-linux-gnu,
-          mips64-unknown-linux-gnuabi64,
-          mips64el-unknown-linux-gnuabi64,
-          mipsel-unknown-linux-gnu,
-          powerpc-unknown-linux-gnu,
-          powerpc64-unknown-linux-gnu,
-          powerpc64le-unknown-linux-gnu,
-          arm-unknown-linux-gnueabi,
-          x86_64-unknown-linux-gnu,
-          x86_64-unknown-linux-musl,
-          x86_64-pc-windows-gnu
-        ]
-  steps:
-    - name: Checkout
-      uses: actions/checkout@v1
-    - name: Install rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        profile: minimal
-        override: true
-        target: ${{ matrix.target }}
+  publish-to-github:
+    name: deploy
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target:
+          [
+            aarch64-unknown-linux-gnu,
+            armv7-unknown-linux-gnueabihf,
+            i686-unknown-linux-gnu,
+            i686-unknown-linux-musl,
+            mips-unknown-linux-gnu,
+            mips64-unknown-linux-gnuabi64,
+            mips64el-unknown-linux-gnuabi64,
+            mipsel-unknown-linux-gnu,
+            powerpc-unknown-linux-gnu,
+            powerpc64-unknown-linux-gnu,
+            powerpc64le-unknown-linux-gnu,
+            arm-unknown-linux-gnueabi,
+            x86_64-unknown-linux-gnu,
+            x86_64-unknown-linux-musl,
+            x86_64-pc-windows-gnu
+          ]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Install rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          override: true
+          target: ${{ matrix.target }}
 
-    - name: Build target
-      uses: actions-rs/cargo@v1
-      with:
-        use-cross: true
-        command: build
-        args: --release --target ${{ matrix.target }}
+      - name: Build target
+        uses: actions-rs/cargo@v1
+        with:
+          use-cross: true
+          command: build
+          args: --release --target ${{ matrix.target }}
 
-    - name: Package
-      shell: bash
-      run: |
-        #strip target/${{ matrix.target }}/release/testmest
-        cd target/${{ matrix.target }}/release          
-        tar czvf ../../../testmest-${{ matrix.target }}.tar.gz testmest
-        cd -
-    - name: Publish
-      uses: softprops/action-gh-release@v1
-      # TODO: if any of the build step fails, the release should be deleted.
-      with:
-        files: "testmest*"
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Package
+        shell: bash
+        run: |
+          #strip target/${{ matrix.target }}/release/testmest
+          cd target/${{ matrix.target }}/release          
+          tar czvf ../../../testmest-${{ matrix.target }}.tar.gz testmest
+          cd -
+      - name: Publish
+        uses: softprops/action-gh-release@v1
+        # TODO: if any of the build step fails, the release should be deleted.
+        with:
+          files: "testmest*"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
