--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,10 @@ jobs:
           profile: minimal
           override: true
           target: ${{ matrix.target }}
-
+      - name: Install Openssl
+        run: |
+          sudo apt update
+          sudo apt install libssl-dev -y
       - name: Build target
         uses: actions-rs/cargo@v1
         with:
