--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,10 @@ tokio = { version = "1.14.0", features = ["full"] }
 indicatif = "0.16.2"
 dialoguer = {version = "0.9.0", features = ["fuzzy-select"]}
 gzp = "0.9.2"
-reqwest = { version = "0.11.6", features = ["multipart", "stream"] }
+reqwest = { version = "0.11.6", default-features = false, features = ["rustls-tls", "json"] }
 synchronized-writer = "1.1.10"
 futures = "0.3.17"
-graphql_client = {version = "0.10.0", features = ["reqwest"]}
+graphql_client = {version = "0.10.0"}
 serde = {version = "1.0.130", features = ["derive"]}
 serde_json = "1.0.71"
 dirs = "4.0.0"
