--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "railway"
 repository = "https://github.com/nebulatgs/cli-rs/"
 description = "Develop and deploy code with zero configuration"
 license = "MIT"
-version = "0.0.1"
+version = "0.1.3-alpha"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -18,10 +18,10 @@ tokio = { version = "1.14.0", features = ["full"] }
 indicatif = "0.16.2"
 dialoguer = {version = "0.9.0", features = ["fuzzy-select"]}
 gzp = "0.9.2"
-reqwest = { version = "0.11.6", features = ["multipart", "stream"] }
+reqwest = { version = "0.11.6", default-features = false, features = ["rustls-tls", "json"] }
 synchronized-writer = "1.1.10"
 futures = "0.3.17"
-graphql_client = {version = "0.10.0", features = ["reqwest"]}
+graphql_client = {version = "0.10.0"}
 serde = {version = "1.0.130", features = ["derive"]}
 serde_json = "1.0.71"
 dirs = "4.0.0"
