--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ hostname = "0.3.1"
 tokio = { version = "1.14.0", features = ["full"] }
 indicatif = "0.16.2"
 dialoguer = {version = "0.9.0", features = ["fuzzy-select"]}
-gzp = {version = "0.9.2",  default-features = false, features = ["deflate_rust"]}
+gzp = {version = "0.9.2"}
 reqwest = { version = "0.11.6", default-features = false, features = ["rustls-tls", "json"] }
 synchronized-writer = "1.1.10"
 futures = "0.3.17"
