--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,9 +39,9 @@ jobs:
             os: macOS-latest
             name: railway-x86_64-apple-darwin.tar.gz
 
-          - target: aarch64-apple-darwin
-            os: macOS-latest
-            name: railway-aarch64-apple-darwin.tar.gz
+          # - target: aarch64-apple-darwin
+          #   os: macOS-latest
+          #   name: railway-aarch64-apple-darwin.tar.gz
 
           - target: x86_64-pc-windows-msvc
             os: windows-latest
@@ -51,9 +51,9 @@ jobs:
             os: windows-latest
             name: railway-i686-pc-windows-msvc.zip
 
-          - target: aarch64-pc-windows-msvc
-            os: windows-latest
-            name: railway-aarch64-pc-windows-msvc.zip
+          # - target: aarch64-pc-windows-msvc
+          #   os: windows-latest
+          #   name: railway-aarch64-pc-windows-msvc.zip
 
           # - target: x86_64-unknown-freebsd
           #   os: ubuntu-latest
