--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,10 @@ edition = "2021"
 backtrace = "0.3.63"
 base64 = "0.13.0"
 chrono = { version = "0.4.19", features = ["serde"] }
-clap = { git = "https://github.com/clap-rs/clap", features = ["derive", "suggestions"] }
+clap = { git = "https://github.com/clap-rs/clap", features = [
+   "derive",
+   "suggestions",
+] }
 colored = "2"
 dialoguer = { version = "0.9.0", features = ["fuzzy-select"] }
 dirs = "4.0.0"
@@ -21,12 +24,19 @@ hostname = "0.3.1"
 ignore = "0.4.18"
 indicatif = "0.16.2"
 open = "2.0.1"
-reqwest = { version = "0.11.6", default-features = false, features = ["rustls-tls", "json"] }
+reqwest = { version = "0.11.6", default-features = false, features = [
+   "rustls-tls",
+   "json",
+] }
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.71"
 synchronized-writer = "1.1.10"
 tar = "0.4.37"
 tokio = { version = "1.14.0", features = ["full"] }
+tokio-util = "0.6.9"
+
+[profile.dev.package."*"]
+opt-level = 3
 
 [profile.release]
 lto = true
